syntax = "proto3";

package discopanel.v1;

option go_package = "github.com/nickheyer/discopanel/pkg/proto/discopanel/v1;discopanelv1";

// Generic chunked file upload service
service UploadService {
  // Initialize a new upload session
  rpc InitUpload(InitUploadRequest) returns (InitUploadResponse);

  // Get upload session status (for resume)
  rpc GetUploadStatus(GetUploadStatusRequest) returns (GetUploadStatusResponse);

  // Upload a single chunk
  rpc UploadChunk(UploadChunkRequest) returns (UploadChunkResponse);

  // Cancel upload and cleanup
  rpc CancelUpload(CancelUploadRequest) returns (CancelUploadResponse);
}

// Initialize upload session
message InitUploadRequest {
  string filename = 1;
  int64 total_size = 2;
  int32 chunk_size = 3;
}

// Session created response
message InitUploadResponse {
  string session_id = 1;
  int32 total_chunks = 2;
}

// Session status lookup
message GetUploadStatusRequest {
  string session_id = 1;
}

// Upload progress and status
message GetUploadStatusResponse {
  string session_id = 1;
  int64 bytes_received = 2;
  int64 total_bytes = 3;
  int32 chunks_received = 4;
  int32 total_chunks = 5;
  repeated int32 missing_chunks = 6;
  bool completed = 7;
  string temp_path = 8;  // Only set when completed
}

// Single chunk upload
message UploadChunkRequest {
  string session_id = 1;
  int32 chunk_index = 2;
  bytes data = 3;
}

// Chunk upload result
message UploadChunkResponse {
  string session_id = 1;
  int64 bytes_received = 2;
  int32 chunks_received = 3;
  bool completed = 4;
  string temp_path = 5;  // Only set when completed
}

// Cancel upload request
message CancelUploadRequest {
  string session_id = 1;
}

// Cancel confirmation
message CancelUploadResponse {}
